[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/FishGame/orange_body.png" type="Texture" id=1]
[ext_resource path="res://assets/FishGame/white_body.png" type="Texture" id=2]
[ext_resource path="res://assets/FishGame/green_body.png" type="Texture" id=3]
[ext_resource path="res://addons/multiplayer/Sync.gd" type="Script" id=4]
[ext_resource path="res://FishGame/Player.gd" type="Script" id=5]
[ext_resource path="res://assets/FishGame/blue_body.png" type="Texture" id=6]
[ext_resource path="res://assets/Font.tres" type="Theme" id=7]
[ext_resource path="res://assets/FishGame/blue_arm_1.png" type="Texture" id=8]
[ext_resource path="res://assets/FishGame/white_arm_1.png" type="Texture" id=9]
[ext_resource path="res://assets/FishGame/white_arm_2.png" type="Texture" id=10]
[ext_resource path="res://assets/FishGame/white_arm.png" type="Texture" id=11]
[ext_resource path="res://assets/FishGame/blue_arm_2.png" type="Texture" id=12]
[ext_resource path="res://assets/FishGame/blue_arm.png" type="Texture" id=13]
[ext_resource path="res://assets/FishGame/orange_arm.png" type="Texture" id=14]
[ext_resource path="res://assets/FishGame/orange_arm_1.png" type="Texture" id=15]
[ext_resource path="res://assets/FishGame/orange_arm_2.png" type="Texture" id=16]
[ext_resource path="res://assets/FishGame/green_arm.png" type="Texture" id=17]
[ext_resource path="res://assets/FishGame/green_arm_1.png" type="Texture" id=18]
[ext_resource path="res://assets/FishGame/green_arm_2.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "Up",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "Up",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 8 ), ExtResource( 12 ) ],
"loop": false,
"name": "Up",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 8 ), ExtResource( 12 ) ],
"loop": false,
"name": "Up",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": false,
"name": "Up",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": false,
"name": "Up",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "Up",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "Up",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D" groups=["players"]]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 5 )

[node name="Sync" type="Node" parent="."]
script = ExtResource( 4 )
initial = PoolStringArray( "position", "rotation", "color" )
synced = PoolStringArray( "ready", "modulate", "net_up" )
process_only_network_master = true

[node name="YouLabel" type="Label" parent="."]
visible = false
margin_left = -31.0
margin_top = -128.0
margin_right = 32.0
margin_bottom = -92.0
theme = ExtResource( 7 )
text = "YOU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="Label" parent="YouLabel"]
anchor_left = 0.508
anchor_top = 6.479
anchor_right = 0.508
anchor_bottom = 6.479
margin_left = 17.996
margin_top = -191.244
margin_right = 57.996
margin_bottom = -155.244
rect_rotation = 90.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arms" type="Node2D" parent="."]
position = Vector2( 23.7776, -32.5625 )
scale = Vector2( 0.601103, 0.601103 )

[node name="GreenArm" type="AnimatedSprite" parent="Arms"]
visible = false
position = Vector2( -107.765, -35.6636 )
frames = SubResource( 18 )
animation = "Up"
offset = Vector2( 107.765, 35.6636 )

[node name="GreenArm2" type="AnimatedSprite" parent="Arms"]
visible = false
position = Vector2( -107.765, 72.4709 )
frames = SubResource( 19 )
animation = "Up"
offset = Vector2( 107.765, 35.6636 )

[node name="BlueArm" type="AnimatedSprite" parent="Arms"]
visible = false
position = Vector2( -107.765, 72.4709 )
frames = SubResource( 13 )
animation = "Up"
offset = Vector2( 107.765, 35.6636 )

[node name="BlueArm2" type="AnimatedSprite" parent="Arms"]
visible = false
position = Vector2( -107.765, -35.6636 )
frames = SubResource( 14 )
animation = "Up"
offset = Vector2( 107.765, 35.6636 )

[node name="WhiteArm2" type="AnimatedSprite" parent="Arms"]
visible = false
position = Vector2( -107.765, -35.6636 )
frames = SubResource( 10 )
animation = "Up"
offset = Vector2( 107.765, 35.6636 )

[node name="WhiteArm" type="AnimatedSprite" parent="Arms"]
visible = false
position = Vector2( -107.765, 72.4709 )
frames = SubResource( 15 )
animation = "Up"
offset = Vector2( 107.765, 35.6636 )

[node name="OrangeArm" type="AnimatedSprite" parent="Arms"]
visible = false
position = Vector2( -107.765, -35.6636 )
frames = SubResource( 16 )
animation = "Up"
offset = Vector2( 107.765, 35.6636 )

[node name="OrangeArm2" type="AnimatedSprite" parent="Arms"]
visible = false
position = Vector2( -107.765, 72.4709 )
frames = SubResource( 17 )
animation = "Up"
offset = Vector2( 107.765, 35.6636 )

[node name="Sprites" type="Node2D" parent="."]

[node name="White" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( -13, 1.90735e-06 )
scale = Vector2( 0.668224, 0.668224 )
texture = ExtResource( 2 )

[node name="Orange" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( -13, 1.90735e-06 )
scale = Vector2( 0.668224, 0.668224 )
texture = ExtResource( 1 )

[node name="Green" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( -13, 1.90735e-06 )
scale = Vector2( 0.668224, 0.668224 )
texture = ExtResource( 3 )

[node name="Blue" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( -13, 1.90735e-06 )
scale = Vector2( 0.668224, 0.668224 )
texture = ExtResource( 6 )
